methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:2: error: Missing closing brace `}' assumed here
def faireV(){
^PictureMono1:2: error: expected class or object definition
def faireV(){
^PictureMono1:17: error: expected start of definition
override def run() {
         ^